k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: revelation-web
  namespace: default
  labels:
    app: revelation-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: revelation-web
  template:
    metadata:
      labels:
        app: revelation-web
    spec:
      imagePullSecrets:
        - name: craas-revelation-registry
      containers:
        - name: web
          image: revelation-registry.registry.twcstorage.ru/revelation-web:0.1.0-2c924dc
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
