k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: revelation-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - revelation-path.ru
        - api.revelation-path.ru
      secretName: revelation-tls
  rules:
    - host: revelation-path.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: revelation-web
                port:
                  number: 80
    - host: api.revelation-path.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: revelation-server
                port:
                  number: 3000
